After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736531 - tsdemux: fix trivial coding style issue
tsdemux: fix trivial coding style issue
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal trivial
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-12 07:35 UTC by Aurélien Zanelli
Modified: 2014-09-12 09:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tsdemux: fix trivial coding style issue (899 bytes, patch)
2014-09-12 07:35 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2014-09-12 07:35:20 UTC
Created attachment 285989 [details] [review]
tsdemux: fix trivial coding style issue

An unwanted space landing in tsdemux, remove it :)
Comment 1 Edward Hervey 2014-09-12 09:32:39 UTC
commit 77b850c08de28afb4d306d74788fb4d044d5a0e4
Author: Aurélien Zanelli <aurelien.zanelli@parrot.com>
Date:   Fri Sep 12 09:30:04 2014 +0200

    tsdemux: fix trivial coding style issue
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736531