tsdemux: fix trivial coding style issue

https://bugzilla.gnome.org/show_bug.cgi?id=736531